[tool.poetry]
name = "selenium-app"
version = "0.1.0"
description = ""
authors = ["Akiyuki Hasegawa < hasesuns123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver-binary = "^94.0.4606"
requests = "^2.26.0"
selenium = "^4.0.0"
webdriver-manager = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
types-requests = "^2.25.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
